--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Naveen</title>
-  <base href="/Personal-Website/">
+  <base href="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      var segmentCount = location.pathname.split('/').length - 1;
+      var projectPath = location.pathname.split('/')[1];
+      var redirect = segmentCount === 0 ? '' : Array(segmentCount).join('../') + projectPath + '/';
+      location.replace(redirect + 'index.html');
+    </script>
 </head>
 <body>
   <app-root></app-root>
