--- a/src/index.html
+++ b/src/index.html
@@ -15,3 +15,12 @@
   <app-root></app-root>
 </body>
 </html>
+
+<!-- Step 1 - ng add angular-cli-ghpages
+Step 2 - push Code to githubRepo
+Step 3 - go to repo setting and select main branch and save
+Step 4 - build application using below cmd
+      ng build --base-href "https://naveenramgeek.github.io/Personal-Website/"
+Step 5 - publish your build changes from your local folder to github pages with below cmd
+   npx angular-cli-ghpages --dir=docs
+Step 6 -  go to repo setting and select gh-pages branch and save -->
